[project]
name = "core-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.1",
    "anthropic>=0.64.0",
    "mcp[cli]>=1.13.0",
    "pydantic>=2.7,<3",
    "pydantic-core>=2.33.2",
    "pydantic-settings[dotenv]>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
